testsuite/poke.pkl/int-struct-type-diag-13.pk
/* { dg-do compile } */

deftype Foo =
  struct uint<32>
  {
    int<16> a;
    offset<int<16>,B> b if a == 2; /* { dg-error "optional.*allowed" } */
  };
